Disabled unused versions, added missing strikes imports